Work/VideoEdit/css/style.css
body, html {
    margin: 10px;
    padding: 10px;
    font-size: 18;
    font-style: sans-serif;
    background-color: #4F4F4F;
    color: WhiteSmoke;
  }

input {
  background-color: #353535 ;
  color: WhiteSmoke;
  font-size: 18px;
}

.inputButton {
  background-color: #353535 ;
  color: WhiteSmoke;
  font-size: 18px;
  padding: 10px 10px;
  border-radius: 8px;
}


.timing_controls {
  color: WhiteSmoke;
  font-style: sans-serif;

  font-size: 22;
}


.video_preview
{
  height: 50vw;
  width: 50vh;
}

#preview
{
  height: 50vw;
  width: 50vh;
}

#cropFade
{
  height: 50vw;
  width: 50vh;
  position: absolute;
  top: 0;
  left: 0;
  fill: none;
  stroke:gold;
  stroke-width:2;
  opacity:1.0;
  pointer-events: none;
}

.dropDown
{
  font-size: 18px;
  background-color: #353535 ;
  color: WhiteSmoke;
}

/* icon buttons */
.widgetBtn {
  background-color: #353535; 
  border: none; /* Remove borders */
  color: WhiteSmoke;
  padding: 12px 16px; /* Some padding */
  font-size: 16px; /* Set a font size */
  cursor: pointer; /* Mouse pointer on hover */
}

/* Darker background on mouse-over */
.widgetBtn:hover {
  background-color:#696969;
}

#uploader
{
  background-color: #353535 ;
  color: WhiteSmoke;
}

.br {
  display: block;
  margin-bottom: 0.5em;
}


#ProcessingSpinner{
  position: absolute;
  width: 50px;
}

